# Microservicios

./: .gitignore  CLAUDE.md
CreacionApis__Rust_Practica/: .gitignore  Cargo.toml  consultas.txt
CreacionApis__Rust_Practica/graphql-empleados/: Cargo.toml
CreacionApis__Rust_Practica/graphql-empleados/src/: main.rs  modelos.rs  resolvers.rs
CreacionApis__Rust_Practica/rest-empleados/: Cargo.toml
CreacionApis__Rust_Practica/rest-empleados/src/: handlers.rs  main.rs  modelos.rs  rutas.rs
Ejercicio Rest/: .env  app.js  docker-compose.yml  package-lock.json  package.json  server.js
Practica 3 rest/api-usuarios/: app.js  db.js  docker-compose.yml  init.sql
Practica 4 Graphql/: app.js  db.js  package-lock.json  package.json
Practica 4 Graphql/resolvers/: inventarioResolver.js
Practica 4 Graphql/schema/: typeDefs.js
Practica 5 Sistema de RRHH con Microservicios/: .gitignore  docker-compose.yml
Practica 5 Sistema de RRHH con Microservicios/empleados-service/: Dockerfile  package-lock.json  package.json
Practica 5 Sistema de RRHH con Microservicios/mysql-init/: init.sql
Practica 5 Sistema de RRHH con Microservicios/proyectos-service/: Dockerfile  package-lock.json  package.json
Practica 8 Monitoreo ELK-TICKS/elk/: docker-compose.yml
Practica 8 Monitoreo ELK-TICKS/ticks/: docker-compose.yml
Primer Parcial/: package.json
Primer Parcial/.claude/: settings.local.json
Primer Parcial/api-trabajadores/: .env  Dockerfile  docker-compose.yml  iniciar.txt  package.json  (+3 more)
Tarea grcp/: client.js  database.sql  db.js  package-lock.json  package.json  server.js
(+32 files in other folders)
