[package]
name = "rest-empleados"
version = "0.1.0"
edition = "2021"

# axum     → web framework (equivalente a Express en Node.js)
# tokio    → runtime async (equivalente a Node's event loop)
# serde    → serializar/deserializar JSON (equivalente a JSON.stringify/parse)
# utoipa   → genera la documentación OpenAPI/Swagger automáticamente
# uuid     → generar IDs únicos (equivalente a crypto.randomUUID())

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
